--- a/index.html
+++ b/index.html
@@ -200,6 +200,7 @@
           <div class="shop">
             <div class="shop-img">
               <img src="img/6 Car Carrier 1.jpg" alt="truck_home">
+              <img src="./img/6 Car Carrier 1.jpg" alt="truck_home">
             </div>
             <div class="shop-body">
               <h3>RC Trucks<br>Collection</h3>
@@ -214,6 +215,7 @@
           <div class="shop">
             <div class="shop-img">
               <img src="img/6 wheel chassis - static model(Non RC)1.jpg" alt="chassis_home">
+              <img src="./img/6 wheel chassis - static model(Non RC)1.jpg" alt="chassis_home">
             </div>
             <div class="shop-body">
               <h3>Chassis<br>Collection</h3>
@@ -228,6 +230,7 @@
           <div class="shop">
             <div class="shop-img">
               <img src="img/6 wheel chassis (Non RC)1.jpg" alt="accessories_home">
+              <img src="./img/6 wheel chassis (Non RC)1.jpg" alt="accessories_home">
             </div>
             <div class="shop-body">
               <h3>Accessories<br>Collection</h3>
@@ -277,6 +280,7 @@
                   <div class="product">
                     <div class="product-img">
                       <img src="img_4059.jpg" alt="10 Wheel Trailer Horse">
+                      <img src="./img/img_4059.jpg" alt="10 Wheel Trailer Horse">
                       <div class="product-label">
                       <!--  <span class="sale">-30%</span> -->
                         <span class="new">NEW</span>
