--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <div class="col-md-3">
             <div class="header-logo">
               <a href="#" class="logo">
-                <img src="./img/logo.png" alt="">
+                <img src="./img/logo.png" alt="Logo">
               </a>
             </div>
           </div>
