--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
         <div class="col-md-4 col-xs-6">
           <div class="shop">
             <div class="shop-img">
-              <img src="6 wheel chassis (Non RC)1.jpg" alt="accessories_home">
+              <img src="img\6 wheel chassis (Non RC)1.jpg" alt="accessories_home">
             </div>
             <div class="shop-body">
               <h3>Accessories<br>Collection</h3>
