--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                   <!-- product -->
                   <div class="product">
                     <div class="product-img">
-                      <img src="img_4059.jpg" alt="10 Wheel Trailer Horse">
+                      <img src="img\img_4059.jpg" alt="10 Wheel Trailer Horse">
                       <div class="product-label">
                       <!--  <span class="sale">-30%</span> -->
                         <span class="new">NEW</span>
