--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <div class="col-md-3">
             <div class="header-logo">
               <a href="#" class="logo">
-                <img src="logo.png" alt="Logo">
+                <img src="img\Logo.png" alt="Logo">
               </a>
             </div>
           </div>
