--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
         <div class="col-md-4 col-xs-6">
           <div class="shop">
             <div class="shop-img">
-              <img src="img\6 wheel chassis - static model(Non RC)1.jpg" alt="chassis_home">
+              <img src="img\6 wheel chassis - Static model(Non RC)1.jpg" alt="chassis_home">
             </div>
             <div class="shop-body">
               <h3>Chassis<br>Collection</h3>
@@ -276,7 +276,7 @@
                   <!-- product -->
                   <div class="product">
                     <div class="product-img">
-                      <img src="img\img_4059.jpg" alt="10 Wheel Trailer Horse">
+                      <img src="img\IMG_4059.jpg" alt="10 Wheel Trailer Horse">
                       <div class="product-label">
                       <!--  <span class="sale">-30%</span> -->
                         <span class="new">NEW</span>
@@ -308,7 +308,7 @@
                   <!-- product -->
                   <div class="product">
                     <div class="product-img">
-                      <img src="img\img_4641.jpg" alt="12 Wheel Dump Truck">
+                      <img src="img\IMG_4641.jpg" alt="12 Wheel Dump Truck">
                       <div class="product-label">
                         <span class="new">NEW</span>
                       </div>
@@ -339,7 +339,7 @@
                   <!-- product -->
                   <div class="product">
                     <div class="product-img">
-                      <img src="img\img_5316.jpg" alt="18-Wheel Trialer Truck">
+                      <img src="img\IMG_5316.jpg" alt="18-Wheel Trialer Truck">
                       <div class="product-label">
                       <!--  <span class="sale">-30%</span>-->
                       </div>
@@ -365,7 +365,7 @@
                   <!-- product -->
                   <div class="product">
                     <div class="product-img">
-                      <img src="img\img_1883.jpg" alt="10 Wheel Container">
+                      <img src="img\IMG_1883.jpg" alt="10 Wheel Container">
                     </div>
                     <div class="product-body">
                       <p class="product-category">RC Trucks</p>
@@ -464,7 +464,7 @@
                   <!-- product -->
                   <div class="product">
                     <div class="product-img">
-                      <img src="img\img_4078.jpg" alt="18 Wheel Flatbed">
+                      <img src="img\IMG_4078.jpg" alt="18 Wheel Flatbed">
                       <div class="product-label">
                         <!--<span class="sale">-30%</span>-->
                         <span class="new">NEW</span>
@@ -496,7 +496,7 @@
                   <!-- product -->
                   <div class="product">
                     <div class="product-img">
-                      <img src="img\img_4480.jpg" alt="">
+                      <img src="img\IMG_4480.jpg" alt="">
                       <div class="product-label">
                         <span class="new">NEW</span>
                       </div>
@@ -527,7 +527,7 @@
                   <!-- product -->
                   <div class="product">
                     <div class="product-img">
-                      <img src="img\img_4099.jpg" alt="18 Wheel Flat Bed">
+                      <img src="img\IMG_4099.jpg" alt="18 Wheel Flat Bed">
                       <div class="product-label">
                         <!--<span class="sale">-30%</span>-->
                       </div>
@@ -553,7 +553,7 @@
                   <!-- product -->
                   <div class="product">
                     <div class="product-img">
-                      <img src="img\img_3902.jpg" alt="10 Wheel Container">
+                      <img src="img\IMG_3902.jpg" alt="10 Wheel Container">
                     </div>
                     <div class="product-body">
                       <p class="product-category">RC Trucks</p>
@@ -581,7 +581,7 @@
                   <!-- product -->
                   <div class="product">
                     <div class="product-img">
-                      <img src="img\img_4531.jpg" alt="Dump Truck">
+                      <img src="img\IMG_4531.jpg" alt="Dump Truck">
                     </div>
                     <div class="product-body">
                       <p class="product-category">Category</p>
