--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                       </div>
                       <div class="product-body">
                         <h3 class="10 wheel Trailer Horse"><a href="#">10 wheel Trailer Horse</a></h3>
-                        <h4 class="product-price"><span class="qty">1x</span>&rupee980.00</h4>
+                        <h4 class="product-price"><span class="qty">1x</span>&#8377;980.00</h4>
                       </div>
                       <button class="delete"><i class="fa fa-close"></i></button>
                     </div>
