--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
                         <img src="img\product01.png" alt="">
                       </div>
                       <div class="product-body">
-                        <h3 class="10 wheel Trailer Horse"><a href="#">10 wheel Trailer Horse</a></h3>
-                        <h4 class="product-price"><span class="qty">1x</span>&#8377;980.00</h4>
+                        <h3 class= <h2>"10 wheel Trailer Horse"</h2>><a href="#">10 wheel Trailer Horse</a></h3>
+                        <h4 class="product-price"><span class="qty">1x</span>&#8377;12,000</h4>
                       </div>
                       <button class="delete"><i class="fa fa-close"></i></button>
                     </div>
