--- a/index.html
+++ b/index.html
@@ -127,15 +127,15 @@
                         <img src="img\product02.png" alt="">
                       </div>
                       <div class="product-body">
-                        <h3 class="product-name"><a href="#">product name goes here</a></h3>
-                        <h4 class="product-price"><span class="qty">3x</span>$980.00</h4>
+                        <h3 class="product-name"><a href="#">18 Wheel Flatbed</a></h3>
+                        <h4 class="product-price"><span class="qty">3x</span>&#8377;12,000</h4>
                       </div>
                       <button class="delete"><i class="fa fa-close"></i></button>
                     </div>
                   </div>
                   <div class="cart-summary">
                     <small>3 Item(s) selected</small>
-                    <h5>SUBTOTAL: $2940.00</h5>
+                    <h5>SUBTOTAL: &#8377;24,000</h5>
                   </div>
                   <div class="cart-btns">
                     <a href="#">View Cart</a>
@@ -549,6 +549,28 @@
                     </div>
                   </div>
                   <!-- /product -->
+                  <section id="rtr-models">
+                    <h2>RTR Models</h2>
+
+                    <div class="product">
+                      <img src="img\6 Car Carier 1.jpg" alt="RTR Model 1">
+                      <h3>RTR Model 1</h3>
+                      <p>Price: ₹5,000</p>
+                    </div>
+
+                    <div class="product">
+                      <img src="img\10 wheel Trailer Horse 4.jpg" alt="RTR Model 2">
+                      <h3>RTR Model 2</h3>
+                      <p>Price: ₹15,000</p>
+                    </div>
+
+                    <div class="product">
+                      <img src="img\IMG_4059.jpg" alt="RTR Model 3">
+                      <h3>RTR Model 3</h3>
+                      <p>Price: ₹9000</p>
+                    </div>
+
+                  </section>
 
                   <!-- product -->
                   <div class="product">
