--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                   <div class="cart-list">
                     <div class="product-widget">
                       <div class="product-img">
-                        <img src="img\product01.png" alt="">
+                        <img src="img\10 wheel Trailer Horse 1.jpg" alt="">
                       </div>
                       <div class="product-body">
                         <h3 class="product-name"><a href="#">10 wheel Trailer Horse</a></h3>
@@ -124,7 +124,7 @@
 
                     <div class="product-widget">
                       <div class="product-img">
-                        <img src="img\product02.png" alt="">
+                        <img src="img\IMG_4083.jpg" alt="Flatbed">
                       </div>
                       <div class="product-body">
                         <h3 class="product-name"><a href="#">18 Wheel Flatbed</a></h3>
@@ -549,7 +549,7 @@
                     </div>
                   </div>
                   <!-- /product -->
-                  
+
                   <!-- product -->
                   <div class="product">
                     <div class="product-img">
