--- a/index.html
+++ b/index.html
@@ -107,13 +107,13 @@
                 <a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true">
                   <i class="fa fa-shopping-cart"></i>
                   <span>Your Cart</span>
-                  <div class="qty">3</div>
+                  <div class="qty">2</div>
                 </a>
                 <div class="cart-dropdown">
                   <div class="cart-list">
                     <div class="product-widget">
                       <div class="product-img">
-                        <img src="img\10 wheel Trailer Horse 1.jpg" alt="">
+                        <img src="img\10 wheel Trailer Horse 1.jpg" alt="Trailer Horse">
                       </div>
                       <div class="product-body">
                         <h3 class="product-name"><a href="#">10 wheel Trailer Horse</a></h3>
